# fpga_start

./: .gitignore  Dockerfile  README.md  dev.sh  docker_build.sh
00_blinky/: CMakeLists.txt  Makefile  blinky_ecp5.v  blinky_ice40.v  main.cpp  main_ecp5.cpp  main_ice40.cpp  top.v
01_state_machine/: CMakeLists.txt  Makefile  conanfile.txt  main.cpp  main_sfml.cpp  pins_ecp5.lpf  state_machine.v  top.v  top_ecp5.v  top_ice40.v
02_seven_seg_parallel/: CMakeLists.txt  Makefile  README.md  conanfile.txt  main.cpp  top.v
03_seven_seg_shift_reg/: CMakeLists.txt  README.md  main.cpp  top.v
04_seven_seg_shift_reg_multi/: CMakeLists.txt  README.md  main.cpp  top.v
04_uart-tx/: CMakeLists.txt  README.md  top.v  uart_tx.v
05_seven_seg_shift_reg_multi_time/: CMakeLists.txt  README.md  main.cpp  top.v
05_uart/: CMakeLists.txt  README  loopback_main.cpp  rx_unit_test.v  top.v  uart_tx.v
05_uart-tx/: CMakeLists.txt
06_uart-rx/: CMakeLists.txt  conanfile.txt  rx_unit_test.v
06_uart-tx/: README.md  conanfile.txt  tx_unit_test.v  tx_unit_test_main.cpp
07_uart/: CMakeLists.txt  SConstruct  loopback.v  loopback_main.cpp  yosys_test.sh
07_uart-rx/: CMakeLists.txt  README.md  rx_unit_test.v  rx_unit_test_main.cpp
08_uart/: CMakeLists.txt  conanfile.txt  loopback.v  loopback_main.cpp
09_ram_test/: CMakeLists.txt  ReadMe.md  main.cpp  ram_contents.mem  top.v
10_vga_controller/: CMakeLists.txt  main.cpp  test_pattern.v  top.v
11_sprite_draw/: CMakeLists.txt  README.md  main.cpp  ram_contents.mem  sprite.v  top.v
12_text_screen/: CMakeLists.txt  README.md  conanfile.txt  main.cpp  ram_contents.mem  text_buffer.mem  tile_layer.v  top.v
cmake/: fpga_project.cmake  yosys_ecp5.cmake  yosys_ice40.cmake
lib/: hex_to_7seg.v  one_hot_encoder.v  shift_reg_output.v  uart_rx.v  uart_tx.v  vga_controller.v
scripts/: build_project.sh
support/: SerInParOutShiftReg.h  SevenSegDisplay.cpp  SevenSegDisplay.h  TestBench.h
